# uk-parliament-relatives

./: README.md  main.py  mp_relations.json  pyproject.toml
