[project]
name = "mp-relations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "logfire[httpx]>=3.14.0",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.0.55",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"
include = [
    "main.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "C90",
    "UP",
    "I",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = [
    "main.py",
]
venvPath = ".venv"
